--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
+# Compiler files
 cache/
 out/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+/broadcast/
+
+# Docs
+docs/
+
+# Dotenv file
 .env
-lib/
+
+# zkSync
+zkout/
