--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+# See https://book.getfoundry.sh/reference/config/formatter
+int_types = "long"
+contract_new_lines = true
+line_length = 140
+bracket_spacing = true
+multiline_func_header = "all"
+number_underscore = "remove"
+quote_style = "double"
+override_spacing = false
 
-ffi = true
-
-
+fs_permissions = [
+    {access = "read", path = "./broadcast"},
+    {access = "read", path = "./reports"},
+]
