--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "solidity.formatter": "forge",
-    "prettier.printWidth": 400
+	"solidity.formatter": "forge",
+	"prettier.printWidth": 400,
+	"wake.compiler.solc.remappings": ["@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/", "forge-std/=lib/forge-std/src/", "@solmate=lib/solmate/src/"]
 }
