--- a/foundry.toml
+++ b/foundry.toml
@@ -16,3 +16,6 @@ fs_permissions = [
     {access = "read", path = "./broadcast"},
     {access = "read", path = "./reports"},
 ]
+
+[fuzz]
+runs = 2000
